--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html[dir="rtl"] {
+  direction: rtl;
+}
 
 body {
 font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI';
@@ -11,3 +14,12 @@ font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI';
 .font-arabic {
 font-family: 'Amiri', serif;
 }
+
+img {
+  transition: transform 0.2s;
+}
+img:hover {
+  transform: scale(1.1);
+}
+
+
